# CloneTracker_single_cell

./: .dockerignore  .gitignore  AD_barcode_cleaned.tsv  Cellecta-CloneTrackerXP-50M-BC14-LNGS-300-Library-Design.txt  Cellecta-CloneTrackerXP-5M-Pool1-BC14-LNGS-300-Library-Design.txt  Dockerfile  README.MD  Sample1_barcode.xls  barcode_assignment_summary.tsv  barcode_final_assignment.py  barcode_final_assignment_50M.py  barcode_process_umi_5.py  barcode_sample.csv  barcode_sample_drugA.csv  barcode_sample_drugB.csv  barcode_stat.tsv  barcode_stat.xls  best_sequence_umi.py  cell_umi_demo.tsv  clonetracker_barcode_assignment_drugA.sh  clonetracker_batch.py  control_qc.sh  control_qc_drugA.sh  control_qc_drugB.sh  feature_reference.csv  pyproject.toml  run.sh  run_count.sh  run_pipeline.py  scRNAseq_QC.py  sgRNA_assignment.py  umi_distribution_analysis_umi_5.py
configs/: README.md
docs/: architecture.md  full_pipeline_usage.md
examples/: README.md  pipeline_samples.csv  pipeline_samples_test.csv
scripts/: README.md  assign_final_barcodes.py  assign_final_sgrnas.py  extract_best_umi_sequences.py  process_barcode_umis.py  process_sgrna_umis.py  run_clonetracker_batch.py  run_crispr_batch.py  run_docker_wsl.sh  run_full_pipeline.py  scRNAseq_QC.py
src/cellecta_sc_pipeline/: __init__.py
src/cellecta_sc_pipeline/pipelines/: __init__.py  full_pipeline.py
src/cellecta_sc_pipeline/pipelines/clonetracker/: __init__.py  batch.py
src/cellecta_sc_pipeline/pipelines/crispr/: __init__.py  batch.py
src/cellecta_sc_pipeline/shared/: __init__.py  scrnaseq_qc.py
tests/: README.md
tests/configs/: generated_clonetracker_samples.csv
